# spredd-api

./: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py
app/: config.py  dependencies.py  main.py
app/auth/: api_keys.py  rate_limiter.py
app/db/: engine.py  models.py
app/routes/: arbitrage.py  auth.py  feed.py  feed_ws.py  markets.py  positions.py  trading.py  usage.py
app/schemas/: auth.py  common.py  feed.py  markets.py  trading.py
app/services/: canary.py  fee.py  feed_service.py  position_tracker.py  usage_tracker.py
